# ondo

./: .gitignore  Cargo.toml  Dockerfile  README.md  asdf.md  build.rs
.github/workflows/: ondo-ci.yml
coverage/: ondo.profraw
examples/: ondo_example.rs  task_queue_example.rs
local-coverage/: ondo.profraw
ondo/: Cargo.toml  Dockerfile
ondo/src/: index.rs  index_definition.rs  main.rs  request.rs
ondo/src/index_definition/: key_value.rs
proto/: ondo.proto  ondo_remote.proto
src/: callback_iterator.rs  cf_name.rs  db.rs  index_definition.rs  lib.rs  main.rs  names.rs  query.rs  request.rs  types.rs
src/db/: cf_name.rs  constants.rs  db_error.rs  effects.rs  enums.rs  mod.rs  request.rs  requests.rs
src/db/definition/index_definition/: mod.rs
src/db/entity/: database_server.rs  domain.rs  id.rs  index.rs  index_value.rs  mod.rs  ondo_key.rs  table.rs  table_value.rs  value.rs
src/db/entity/index/: key_value.rs  mod.rs
src/db/entity/reference/: README.md  cf_name.rs  column_value_reference.rs  database_server_reference.rs  domain_reference.rs  effect.rs  index_reference.rs  index_value_reference.rs  mod.rs  table_reference.rs  table_value_reference.rs
src/db/entity/text_index/: create_tantivy_index.rs  get_tantivy_index_path.rs  load_or_create_tantivy_index.rs  load_tantivy_index.rs  mod.rs  search_table_values.rs  text_index_task.rs
src/db/enums/: index_iterator_requests_factory.rs  mod.rs  table_stored_iterator_requests_factory.rs
src/db/index_definition/: key_value.rs  mod.rs
src/db/meta/: domain_meta.rs  mod.rs  server_meta.rs  table_meta.rs
src/db/meta/index_meta/: mod.rs
src/db/names/: cf_name.rs  index_name.rs  mod.rs  table_name.rs
src/db/reference/: README.md  cf_name.rs  column_value_reference.rs  effect.rs  index_reference.rs  index_value_reference.rs  mod.rs  table_value_reference.rs
src/db/reference/database_server_reference/: mod.rs  stored.rs
src/db/reference/domain_reference/: mod.rs  stored.rs
src/db/reference/effect/: column_value_effect.rs  database_server_stored_effect.rs  domain_stored_effect.rs  index_value_effect.rs  table_stored_effect.rs  table_value_effect.rs
src/db/reference/requests/: index_requests.rs  (+7 more)
src/db/server/: database_server_effects_sink.rs  database_server_requests.rs  database_server_trait.rs  database_server_trait_impl.rs  db_error_to_status.rs  domain_server_trait.rs  domain_server_trait_impl.rs  effects_sink.rs  index_server_trait.rs  index_server_trait_impl.rs  indexed_value_server_trait.rs  indexed_value_server_trait_impl.rs  mod.rs  ondo_key.rs  rocks_db_accessor.rs  table_server_trait.rs  table_server_trait_impl.rs  table_value_server_trait.rs  table_value_server_trait_impl.rs  text_index_server_trait.rs  text_index_server_trait_impl.rs  to_entity_trait.rs  to_reference_trait.rs  value.rs  value_to_json.rs
src/db/tasks/: mod.rs  task.rs  task_id.rs  task_queue.rs
src/index_definition/: key_value.rs
src/names/: cf_name.rs  domain_name.rs  index_name.rs  table_name.rs
tests/: dummy_hello_test.rs
(+109 files in other folders)
