[package]
name = "ondo"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"
default-run = "ondo-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://actix.rs/docs/getting-started
actix-web = "4" 
# https://docs.rs/rocksdb/latest/rocksdb/ # https://github.com/rust-rocksdb/rust-rocksdb # http://rocksdb.org/docs/getting-started.html
rocksdb = "0.19.0"
# https://docs.rs/couchdb/0.0.1/couchdb/ 
couchdb = "0.6.0" 
# https://crates.io/crates/serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] } 
prost = "0.11.2"
tonic = "0.8.2"
bincode = "1.3.3"

[dev-dependencies]
mockall = "0.11.3"

[build-dependencies]
cargo-emit = "0.2.1"
tonic-build = "0.8.2"
