[package]
name = "ondo"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

# docker build failed on : RUN cargo fetch, default-run target `ondo-server` not found
#default-run = "ondo-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
tokio = { version = "1.21.2", features = ["full"] }
prost = "0.11.2"
tonic = "0.8.2"
bincode = "1.3.3"
rmp-serde = "1.1.1"
semver = "1.0"
tempfile = "3.3.0"
chrono = "0.4.23"
async-trait = "0.1.58"
futures = "0.3.25"
tantivy = "0.18.1"
log = "0.4.17"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
mockall = "0.11.3"

[build-dependencies]
cargo-emit = "0.2.1"
tonic-build = "0.8.2"
