[package]
name = "ondo"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" # https://actix.rs/docs/getting-started
rocksdb = "0.19.0" # https://docs.rs/rocksdb/latest/rocksdb/ # https://github.com/rust-rocksdb/rust-rocksdb