[package]
name = "ondo"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://actix.rs/docs/getting-started
actix-web = "4" 
# https://docs.rs/rocksdb/latest/rocksdb/ # https://github.com/rust-rocksdb/rust-rocksdb # http://rocksdb.org/docs/getting-started.html
rocksdb = "0.19.0"
# https://docs.rs/couchdb/0.0.1/couchdb/ 
couchdb = "0.6.0" 
# https://crates.io/crates/serde
serde = "1.0.147"
